--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
@@ -191,6 +191,7 @@
     <Content Include="Content\obrazki\u1.jpg" />
     <Content Include="Content\obrazki\u10.png" />
     <Content Include="Content\obrazki\u11.png" />
+    <Content Include="Content\obrazki\u5.png" />
     <Content Include="Content\obrazki\u9.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -280,6 +281,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Home\Aplikacja.cshtml" />
+    <Content Include="Views\Home\Lokalizacja.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
