--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
@@ -189,9 +189,13 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\obrazki\u1.jpg" />
+    <Content Include="Content\obrazki\u10 %281%29.png" />
+    <Content Include="Content\obrazki\u10 %282%29.png" />
+    <Content Include="Content\obrazki\u10 %283%29.png" />
     <Content Include="Content\obrazki\u10.png" />
     <Content Include="Content\obrazki\u11.png" />
     <Content Include="Content\obrazki\u5.png" />
+    <Content Include="Content\obrazki\u8.png" />
     <Content Include="Content\obrazki\u9.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -285,6 +289,10 @@
     <Content Include="Views\Home\Raport_Sprzedazy.cshtml" />
     <Content Include="Views\Home\Cennik.cshtml" />
     <Content Include="Views\Home\Rozliczenie.cshtml" />
+    <Content Include="Views\Home\Sklep_z_czesciami.cshtml" />
+    <Content Include="Views\Home\Lakiernia.cshtml" />
+    <Content Include="Views\Home\Mechanika.cshtml" />
+    <Content Include="Views\Home\Blacharnia.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
