--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
@@ -193,6 +193,7 @@
     <Content Include="Content\obrazki\u10 %282%29.png" />
     <Content Include="Content\obrazki\u10 %283%29.png" />
     <Content Include="Content\obrazki\u10.png" />
+    <Content Include="Content\obrazki\u11 %281%29.png" />
     <Content Include="Content\obrazki\u11.png" />
     <Content Include="Content\obrazki\u5.png" />
     <Content Include="Content\obrazki\u8.png" />
@@ -293,6 +294,7 @@
     <Content Include="Views\Home\Lakiernia.cshtml" />
     <Content Include="Views\Home\Mechanika.cshtml" />
     <Content Include="Views\Home\Blacharnia.cshtml" />
+    <Content Include="Views\Home\Klimatyzacja.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
