--- a/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
+++ b/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt/w57448_Arkadiusz_Kalita_projekt.csproj
@@ -191,6 +191,7 @@
     <Content Include="Content\obrazki\u1.jpg" />
     <Content Include="Content\obrazki\u10.png" />
     <Content Include="Content\obrazki\u11.png" />
+    <Content Include="Content\obrazki\u19.png" />
     <Content Include="Content\obrazki\u9.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
